Se implementa el mantenimiento de premios
